--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ main {
 
 #items {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-bottom: 15px;
